posters from PL in ML

--- a/index.html
+++ b/index.html
@@ -47,68 +47,14 @@
   </div><!-- /.row -->
   </div>
 </div>
-<div class="section-colored" id="Resume">
-  <div class="container">
-    <div class="row">
-  <div align="center" class="col-lg-2 col-md-2 col-sm-2">&nbsp;</div>
-  </div><!-- /.row -->
-    <div class="row">
-  <div align="center" class="col-lg-2 col-md-2 col-sm-2">&nbsp;</div>
-  </div><!-- /.row -->
-  </div>
-</div>
-<div class="section">
-  <div class="container">
-    <div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12"><p style="font-size: 28px">MI&#178; is a group of mathematicians and computer scientists that love to play with data. <br/>
-  We are spread between Warsaw University of Technology and University of Warsaw.
-<br/>
-Data Lab is our creative space. <br/>
-Here we are forging new ideas, creating tools, solving problems, doing consulting and sharing our positive attitude.<br/></p></div>
-  </div><!-- /.row -->
- </div>
-</div>
-<div class="section">
-  <div class="container">
-    <div class="row">
-  <div class="col-lg-3 col-md-3 col-sm-3"><p style="font-size: 30px"># research</p>
-<p style="font-size: 24px">Join our seminars related to Data Science (Mondays), Auto ML (Wednesdays) or Interpretable Machine Learning (Thursdays).</p></div>
-  <div class="col-lg-3 col-md-3 col-sm-3"><p style="font-size: 30px"># XAI</p>
-<p style="font-size: 24px">eXplainable Artificial Inteligence projects improve Human-Model interactions. Build new interfaces for model understanding.</p></div>
-  <div class="col-lg-3 col-md-3 col-sm-3"><p style="font-size: 30px"># DataVis</p>
-<p style="font-size: 24px">Visual Data and Model exploration projects help to better understand world around us.</p></div>
-  <div class="col-lg-3 col-md-3 col-sm-3"><p style="font-size: 30px"># Industrial PhD</p>
-<p style="font-size: 24px">Our industrial PhD projects are mostly focused on new applications of AI in problems like NLP, NER, VQA or SA.</p></div>
-  </div><!-- /.row -->
- </div>
-</div>
-<div class="section-colored" id="Resume">
-  <div class="container">
-    <div class="row">
-  <div align="center" class="col-lg-2 col-md-2 col-sm-2">&nbsp;</div>
-  </div><!-- /.row -->
-    <div class="row">
-  <div align="center" class="col-lg-2 col-md-2 col-sm-2">&nbsp;</div>
-  </div><!-- /.row -->
-  </div>
-</div>
 
 <div class="owl-carousel owl-theme">
-  <div> <img src="posters/poster_01.png"/> </div>
-  <div> <img src="posters/poster_07.png"/> </div>
-  <div> <img src="posters/poster_08.png"/> </div>
-  <div> <img src="posters/poster_09.png"/> </div>
-  <div> <img src="posters/poster_10.png"/> </div>
-  <div> <img src="posters/poster_02.png"/> </div>
-  <div> <img src="posters/poster_11.png"/> </div>
-  <div> <img src="posters/poster_06.png"/> </div>
-  <div> <img src="posters/poster_12.png"/> </div>
-  <div> <img src="posters/poster_05.png"/> </div>
-  <div> <img src="posters/poster_13.png"/> </div>
-  <div> <img src="posters/poster_04.png"/> </div>
-  <div> <img src="posters/poster_14.png"/> </div>
-  <div> <img src="posters/poster_03.png"/> </div>
-  <div> <img src="posters/poster_15.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_01.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_02.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_03.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_04.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_05.png"/> </div>
+  <div> <img src="posters/posters_mlinpl_06.png"/> </div>
 </div>
 <div class="section">
   <div class="container">
@@ -140,7 +86,7 @@ Join us at https://mi2.mini.pw.edu.pl/ </p></div>
   $(document).ready(function() {
     var owl = $('.owl-carousel');
     owl.owlCarousel({
-        items:2,
+        items:1,
         loop:true,
         margin:10,
         autoplay:true,
